--- a/animationViewer.html
+++ b/animationViewer.html
@@ -30,8 +30,8 @@
           "animations": {
             "run": [0, 7, "run"]
           },
-          "images": [document.getElementById("animationURI").value],
-          "images": ["images/Hero.png"],
+          //"images": [document.getElementById("animationURI").value],
+          "images": ["images/Zombie.png"],
 
           "frames": {
             "width": 32,
