--- a/index.html
+++ b/index.html
@@ -56,6 +56,54 @@
           xhr.send();
       }
 
+      //Возвращает пересечение прямоугольников как прямоугольник
+      function rectIntersection(r1, r2){
+        var x1 = r1.x, y1 = r1.y;
+        var x2 = r1.x + r1.w, y2 = r1.y + r1.h;
+
+        var x3 = r2.x, y3 = r2.y;
+        var x4 = r2.x + r2.w, y4 = r2.y + r2.h;
+
+        var xt = 0, yt = 0;
+        var intersect = {x: 0, y: 0, w: 0, h: 0, xt:0, yt:0}
+
+        if(y2 < y3 || y4 < y1) return intersect; //All is ok, no intersections
+        if(x2 < x3 || x4 < x1) return intersect; //All is ok, no intersections              
+
+        if(x1 < x3){ //x1 x3 x2 x4
+          intersect.x = x3;
+          intersect.w = x2 - x3;
+          xt = - intersect.w - 1;
+        }else if(x2 < x4){ //x3 x1 x2 x4
+          intersect.x = x3;
+          intersect.w = x2 - x3;
+          xt = - intersect.w - 1;
+        }else{ // x3 x1 x4 x2
+          intersect.x = x1;
+          intersect.w = x4 - x1;
+          xt = intersect.w + 1;
+        }                            
+
+
+        if(y1 < y3){ //y1 y3 y2 y4
+          intersect.y = y3;
+          intersect.h = y2 - y3;
+          yt = - intersect.h - 1;
+        }else if(y2 < y4){ //y3 y1 y2 y4
+          intersect.y = y3;
+          intersect.h = y2 - y3;
+          yt = - intersect.h - 1;
+        }else{ // y3 y1 y4 y2
+          intersect.y = y1;
+          intersect.h = y4 - y1;
+          yt = intersect.h + 1;
+        }                                                   
+        intersect.xt = xt;
+        intersect.yt = yt;
+
+        return intersect;
+      }
+
       //Класс зомби
       function Zombie(x, y){
         x = x || 0;
@@ -73,52 +121,23 @@
           var intersect0 = {x: 0, y: 0, w: 0, h: 0, xt: 0, yt:0 };
 
           for(var i = 0; i < obst.length; i++){
-            var xt = 0, yt = 0;
-            var intersect = {x: 0, y: 0, w: 0, h: 0, xt:0, yt:0}
+            var r1 = {x: x - this.hitRadius, y: y - this.hitRadius, w: 2*this.hitRadius, h: 2*this.hitRadius};
+            var r2 = {x: obst[i].x, y: obst[i].y, w: obst[i].width, h: obst[i].height};
 
-            var x1 = x - this.hitRadius;
-            var x2 = x + this.hitRadius;
-            var x3 = obst[i].x;
-            var x4 = obst[i].x + obst[i].width;
+            var intersect = rectIntersection(r1, r2);
 
-            var y1 = y - this.hitRadius;
-            var y2 = y + this.hitRadius;
-            var y3 = obst[i].y;
-            var y4 = obst[i].y + obst[i].height;
-            if(y2 < y3 || y4 < y1) continue; //All is ok, no intersections
-            if(x2 < x3 || x4 < x1) continue; //All is ok, no intersections              
+            if(intersect0.w * intersect0.h < intersect.w * intersect.h) intersect0 = intersect;
+          }
 
-            if(x1 < x3){ //x1 x3 x2 x4
-              intersect.x = x3;
-              intersect.w = x2 - x3;
-              xt = - intersect.w - 1;
-            }else if(x2 < x4){ //x3 x1 x2 x4
-              intersect.x = x3;
-              intersect.w = x2 - x3;
-              xt = - intersect.w - 1;
-            }else{ // x3 x1 x4 x2
-              intersect.x = x1;
-              intersect.w = x4 - x1;
-              xt = intersect.w + 1;
-            }                            
+          var zomb = gMap.zombies;
+          for(var i = 0; i < zomb.length; i++){
+            if(zomb[i] == this) continue;
+            var r1 = {x: x - this.hitRadius, y: y - this.hitRadius, w: 2*this.hitRadius, h: 2*this.hitRadius};
+            var r2 = {x: zomb[i].animation.x - zomb[i].hitRadius, y: zomb[i].animation.y - zomb[i].hitRadius,
+                      w: 2 * zomb[i].hitRadius, h: 2 * zomb[i].hitRadius};
 
+            var intersect = rectIntersection(r1, r2);
 
-            if(y1 < y3){ //y1 y3 y2 y4
-              intersect.y = y3;
-              intersect.h = y2 - y3;
-              yt = - intersect.h - 1;
-            }else if(y2 < y4){ //y3 y1 y2 y4
-              intersect.y = y3;
-              intersect.h = y2 - y3;
-              yt = - intersect.h - 1;
-            }else{ // y3 y1 y4 y2
-              intersect.y = y1;
-              intersect.h = y4 - y1;
-              yt = intersect.h + 1;
-            }                                                   
-            intersect.xt = xt;
-            intersect.yt = yt;
-            
             if(intersect0.w * intersect0.h < intersect.w * intersect.h) intersect0 = intersect;
           }
 
@@ -206,52 +225,11 @@
           var intersect0 = {x: 0, y: 0, w: 0, h: 0, xt: 0, yt:0 };
 
           for(var i = 0; i < obst.length; i++){
-            var xt = 0, yt = 0;
-            var intersect = {x: 0, y: 0, w: 0, h: 0, xt:0, yt:0}
+            var r1 = {x: x - this.hitRadius, y: y - this.hitRadius, w: 2*this.hitRadius, h: 2*this.hitRadius};
+            var r2 = {x: obst[i].x, y: obst[i].y, w: obst[i].width, h: obst[i].height};
 
-            var x1 = x - this.hitRadius;
-            var x2 = x + this.hitRadius;
-            var x3 = obst[i].x;
-            var x4 = obst[i].x + obst[i].width;
+            var intersect = rectIntersection(r1, r2);
 
-            var y1 = y - this.hitRadius;
-            var y2 = y + this.hitRadius;
-            var y3 = obst[i].y;
-            var y4 = obst[i].y + obst[i].height;
-            if(y2 < y3 || y4 < y1) continue; //All is ok, no intersections
-            if(x2 < x3 || x4 < x1) continue; //All is ok, no intersections              
-
-            if(x1 < x3){ //x1 x3 x2 x4
-              intersect.x = x3;
-              intersect.w = x2 - x3;
-              xt = - intersect.w - 1;
-            }else if(x2 < x4){ //x3 x1 x2 x4
-              intersect.x = x3;
-              intersect.w = x2 - x3;
-              xt = - intersect.w - 1;
-            }else{ // x3 x1 x4 x2
-              intersect.x = x1;
-              intersect.w = x4 - x1;
-              xt = intersect.w + 1;
-            }                            
-
-
-            if(y1 < y3){ //y1 y3 y2 y4
-              intersect.y = y3;
-              intersect.h = y2 - y3;
-              yt = - intersect.h - 1;
-            }else if(y2 < y4){ //y3 y1 y2 y4
-              intersect.y = y3;
-              intersect.h = y2 - y3;
-              yt = - intersect.h - 1;
-            }else{ // y3 y1 y4 y2
-              intersect.y = y1;
-              intersect.h = y4 - y1;
-              yt = intersect.h + 1;
-            }                                                   
-            intersect.xt = xt;
-            intersect.yt = yt;
-            
             if(intersect0.w * intersect0.h < intersect.w * intersect.h) intersect0 = intersect;
           }
 
@@ -380,7 +358,7 @@
           player.move(v.x, v.y);
 
           var mapMove = {dx:0, dy:0};
-          var mvC = 0.2; // Константа, поределяющая перемещение карты
+          var mvC = 0.3; // Константа, поределяющая перемещение карты
 
           if(player.animation.x < WIDTH * mvC && gMap.position.x < 0)
             mapMove.dx = -v.x;
